fixed overflow in notes

--- a/jangoMain/static/notesApp/css/style.css
+++ b/jangoMain/static/notesApp/css/style.css
@@ -2,7 +2,6 @@ html,
 body {
   height: 100%;
   min-height: 100%;
-  overflow-y: hidden
 }
 
 .red {
@@ -58,6 +57,11 @@ body {
 .sort-icons {
   color: #727272;
   margin-bottom: 20px;
+}
+
+.sort-icons i:hover {
+    cursor: pointer;
+    color: rgb(78, 147, 236)
 }
 
 .note {
